Fix inside page ad that overflows viewport

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -184,8 +184,7 @@ p.author {
   margin-bottom: 40px;
 }
 .inside-ad {
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin: 25px -15px;
 }
 
 @item-width: 280px;
